--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,28 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --ast-global-color-0: #1818dc;
+    --ast-global-color-1: #111218;
+    --ast-global-color-2: #22242f;
+    --ast-global-color-3: #45485f;
+    --ast-global-color-4: #f7f7f8;
+    --ast-global-color-5: #ffffff;
+    --ast-global-color-6: #c3f0fe;
+    --ast-global-color-7: #e8e8ee;
+    --ast-global-color-8: #7d82a1;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+  box-sizing: border-box;
+  font-family: "Lato", sans-serif;
 }
 
+@media (prefers-color-scheme: dark) {}
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
